src/test/deca/context/invalid/inheritance/extends_non_class_type.deca
// Description :
//    Classe héritant d'un type non classe.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 8 : La super-classe int n'est pas une classe

class A extends int {
    int x;
}

{
}

